force-app/main/default/objects/Site_Visits__c/Site_Visits__c.object-meta.xml
<CustomObject>
    <label>Site Visit</label>
    <nameField>
        <label>Visit Reason</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>