force-app/main/default/objects/Site_Visits__c/fields/Total_Expenses_on_Visits__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses_on_Visits__c</fullName>
    <label>Total Expenses on Visits</label>
    <summarizedField>Site_Expenses__c.Amount__c</summarizedField>
    <summaryForeignKey>Site_Expenses__c.Site_Visited__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>