force-app/main/default/objects/Site_Visits__c/fields/Visit_info__c.field-meta.xml
<CustomField>
    <fullName>Visit_info__c</fullName>
    <label>Visit info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>