force-app/main/default/objects/Site_Visits__c/fields/Visit_place__c.field-meta.xml
<CustomField>
    <fullName>Visit_place__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit place</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Site Visits</relationshipLabel>
    <relationshipName>Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>