force-app/main/default/objects/Site_Visits__c/fields/VisitDate__c.field-meta.xml
<CustomField>
    <fullName>VisitDate__c</fullName>
    <label>Visit date</label>
    <type>Date</type>
</CustomField>