force-app/main/default/objects/Site_Visits__c/fields/VisitedBy__c.field-meta.xml
<CustomField>
    <fullName>VisitedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>